objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Product_s_Range__c</fullName>
        <description>TECH_SDHCategoryId__c installed Product Field</description>
        <formula>SVMXC__Serial_Number__r.TECH_SDHCategoryId__c</formula>
        <label>Product&apos;s Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productive_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productive Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPEfficiencyType__c</fullName>
        <description>This field value will be Green in case it has to be counted as &quot;productive&quot; time, it will be &quot;red&quot; otherwise. For non actual / non time related records, it will be blank.</description>
        <formula>IF(
  OR(
    NOT( CONTAINS($Label.CLSSRV_WDD_RecordType, RecordTypeId)),
    NOT(  ISPICKVAL( SVMXC__Line_Type__c , &apos;Labor&apos;) )
  ),
  &apos;&apos;,
  IF(
    AND(
      NOT(CONTAINS($Label.CLMAR16SRV10, SVMXC__Service_Order__r.RecordTypeId) ),
      NOT(  ISPICKVAL( SVMXC__Service_Order__r.SVMXC__Order_Type__c , &apos;Courtesy Visit&apos;) ),
      CONTAINS($Label.CLSRV_REP_GreenActivityTypes, TEXT(SVMXC__Activity_Type__c) )
    ),
    &apos;Green&apos;,
    &apos;Red&apos;
  )
)</formula>
        <inlineHelpText>This field value will be Green in case it has to be counted as &quot;productive&quot; time, it will be &quot;red&quot; otherwise. For non actual / non time related records, it will be blank.</inlineHelpText>
        <label>REP Efficiency Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMANumber__c</fullName>
        <label>RMA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <formula>Parts_Order_Line_RMA__r.RequestedDate__c</formula>
        <label>RequestedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Scheduled_Date__c</fullName>
        <formula>SVMXC__Service_Order__r.Requested_Scheduled_Date__c</formula>
        <label>Requested/Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <description>&quot;Wrong Part Delivered&quot; added by nitin khunal in picklist</description>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Not Used</fullName>
                </value>
                <value>
                    <fullName>Request Analysis</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival</fullName>
                </value>
                <value>
                    <fullName>Replace Proactively</fullName>
                </value>
                <value>
                    <fullName>Used, Not Defective</fullName>
                </value>
                <value>
                    <fullName>TEX</fullName>
                </value>
                <value>
                    <fullName>EPP Equipment Protection Policy</fullName>
                </value>
                <value>
                    <fullName>Request For Analysis Direct Shipment</fullName>
                </value>
                <value>
                    <fullName>Request For Analysis Safety Critical</fullName>
                </value>
                <value>
                    <fullName>Wrong Part Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnedQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Returned Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Unused_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Returned Unused Qty</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Used_items_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Returned Used items Qty</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Type__c</fullName>
        <description>Indicates the type of activity performed. Usually applicable for labor line types.</description>
        <inlineHelpText>Indicates the type of activity performed. Usually applicable for labor line types.</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Job Prep &amp; Report</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <default>true</default>
                    <label>Service</label>
                </value>
                <value>
                    <fullName>Customer Delay</fullName>
                </value>
                <value>
                    <fullName>Rest</fullName>
                </value>
                <value>
                    <fullName>Idle time</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Price2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit price for this line</description>
        <inlineHelpText>Unit price for this line</inlineHelpText>
        <label>Line Price Per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Quantity2__c</fullName>
        <description>Number of units consumed. This is context-sensitive based on line type.</description>
        <inlineHelpText>Number of units consumed. This is context-sensitive based on line type.</inlineHelpText>
        <label>Line Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Applied_Rate_Type__c</fullName>
        <label>Applied Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Markup %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Billable_Line_Price__c</fullName>
        <description>Total price for this parts/labor/expense/travel line considering discount% and covered%</description>
        <inlineHelpText>Total price for this parts/labor/expense/travel line</inlineHelpText>
        <label>Billable Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billable_Quantity__c</fullName>
        <description>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
        <inlineHelpText>Quantity of part, time, expenses or travel that needs to be invoiced. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
        <label>Billable Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Information__c</fullName>
        <description>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</description>
        <inlineHelpText>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</inlineHelpText>
        <label>Billing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that canceled this parts request. This is set automatically when a user cancels a parts request.</description>
        <inlineHelpText>User that canceled this parts request. This is set automatically when a user cancels a parts request.</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Line_Canceled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</description>
        <inlineHelpText>Date/time when this service order parts request was canceled. This is set automatically when a user cancels a parts request.</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed the service order line. This is set automatically when parts are received.</description>
        <inlineHelpText>User that closed the service order line. This is set automatically when parts are received.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Line_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this service order line was closed. This is set automatically when parts are received.</description>
        <inlineHelpText>Date/time when this service order line was closed. This is set automatically when parts are received.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Consumed_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location from which inventory was consumed. Link to an existing site record in ServiceMax</description>
        <inlineHelpText>Location from which inventory was consumed. Link to an existing site record in ServiceMax</inlineHelpText>
        <label>Consumed From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_Cons_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cost_Category__c</fullName>
        <description>Type of costing applied to calculate the actual line price</description>
        <inlineHelpText>Type of costing applied to calculate the actual line price</inlineHelpText>
        <label>Cost Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Double Time</fullName>
                </value>
                <value>
                    <fullName>Time and a half</fullName>
                </value>
                <value>
                    <fullName>After Hours</fullName>
                </value>
                <value>
                    <fullName>On Call</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Covered__c</fullName>
        <label>Covered %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Received__c</fullName>
        <description>Date when this product was actually received (Last receipt date if multiple receipts are made)</description>
        <inlineHelpText>Date when this product was actually received. Use last receipt date if multiple receipts are made for the same request.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Requested__c</fullName>
        <description>Date when this product is required at the field/target location.</description>
        <inlineHelpText>Date when this product is required at the field/target location.</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dead_Time__c</fullName>
        <description>The time spent on non-service activities (In Minutes). Applies only on labor lines.</description>
        <label>Dead Time (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>Work Order Line Discount Percentage</description>
        <inlineHelpText>Work Order Line Discount Percentage</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_and_Time__c</fullName>
        <description>End date and time if the line type is Labor</description>
        <inlineHelpText>End date and time if the line type is Labor</inlineHelpText>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <label>Entitlement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Estimated_Price2__c</fullName>
        <description>Total estimated price for this parts/labor/expense line</description>
        <inlineHelpText>Total estimated price for this parts/labor/expense line</inlineHelpText>
        <label>Estimated Price Per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Estimated_Quantity2__c</fullName>
        <description>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
        <inlineHelpText>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
        <label>Estimated Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expense_Type__c</fullName>
        <description>Type of expense likely to be incurred, if the line type is Expenses</description>
        <inlineHelpText>Type of expense likely to be incurred, if the line type is Expenses</inlineHelpText>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking &amp; Tolls</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Per Diem</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Customer Delay</fullName>
                </value>
                <value>
                    <fullName>6th day Worked</fullName>
                </value>
                <value>
                    <fullName>Nuclear Site Compensation</fullName>
                </value>
                <value>
                    <fullName>Off Duty Intervention</fullName>
                </value>
                <value>
                    <fullName>On Duty Compensation</fullName>
                </value>
                <value>
                    <fullName>On Duty Intervention</fullName>
                </value>
                <value>
                    <fullName>Partial Per Diem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Location for which parts are requested</description>
        <inlineHelpText>From Location</inlineHelpText>
        <label>From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_From_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</description>
        <inlineHelpText>Name of the service group member if the Log Against is set to Group Member. Is a lookup to an existing group member in ServiceMax</inlineHelpText>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Include_in_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</description>
        <inlineHelpText>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</inlineHelpText>
        <label>Include in Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this usage/consumption is billable to the customer</description>
        <inlineHelpText>Indicates if this usage/consumption is billable to the customer</inlineHelpText>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Status__c</fullName>
        <description>Service Order Line Status.</description>
        <inlineHelpText>Service Order Line Status.</inlineHelpText>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Type__c</fullName>
        <description>Indicates the type of usage: Parts, Labor or Expenses</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Log_Against__c</fullName>
        <description>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</description>
        <inlineHelpText>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</inlineHelpText>
        <label>Log Against</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Team</fullName>
                </value>
                <value>
                    <fullName>Technician/Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Posted_To_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if quantity from this service order line has been posted to inventory or not. This is applicable for Part Requests and Usage/Consumption records in a service order.</description>
        <inlineHelpText>Indicates if quantity from this service order line has been posted to inventory or not. This is applicable for Part Requests and Usage/Consumption records in a service order.</inlineHelpText>
        <label>Posted To Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</description>
        <inlineHelpText>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</inlineHelpText>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_Shipment_Initiated2__c</fullName>
        <description>For part requests, quantity for which shipment has been initiated so far.</description>
        <inlineHelpText>For part requests, quantity for which shipment has been initiated so far.</inlineHelpText>
        <label>Qty Shipment Initiated</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_Shipped2__c</fullName>
        <description>For part requests, actual quantity shipped for the request.</description>
        <inlineHelpText>For part requests, actual quantity shipped for the request.</inlineHelpText>
        <label>Qty Shipped</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_City__c</fullName>
        <description>“City” part of the received location</description>
        <inlineHelpText>“City” part of the received location</inlineHelpText>
        <label>Received City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Country__c</fullName>
        <description>“Country” part of the received location</description>
        <inlineHelpText>“Country” part of the received location</inlineHelpText>
        <label>Received Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Received Location (Do Not Use)</description>
        <inlineHelpText>Received Location (Do Not Use)</inlineHelpText>
        <label>Received Location (Do Not Use)</label>
        <referenceTo>SVMXC__Service_Contract_Sites__c</referenceTo>
        <relationshipName>Work_Details_Received_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Quantity2__c</fullName>
        <description>Number of units of this product received so far.</description>
        <inlineHelpText>Number of units of this product received so far.</inlineHelpText>
        <label>Received Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_State__c</fullName>
        <description>“State/Province” part of the received location</description>
        <inlineHelpText>“State/Province” part of the received location</inlineHelpText>
        <label>Received State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Street__c</fullName>
        <description>“Street” part of the received location</description>
        <inlineHelpText>“Street” part of the received location</inlineHelpText>
        <label>Received Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Zip__c</fullName>
        <description>“Zip/Postal code” part of the received location</description>
        <inlineHelpText>“Zip/Postal code” part of the received location</inlineHelpText>
        <label>Received Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Reference_Information__c</fullName>
        <description>Additional information about the work performed, or expense incurred (travel ticket # for example)</description>
        <inlineHelpText>Additional information about the work performed, or expense incurred (travel ticket # for example)</inlineHelpText>
        <label>Reference Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_City__c</fullName>
        <description>“City” part of the requested location</description>
        <inlineHelpText>“City” part of the requested location</inlineHelpText>
        <label>Requested City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Country__c</fullName>
        <description>“Country” part of the requested location</description>
        <inlineHelpText>“Country” part of the requested location</inlineHelpText>
        <label>Requested Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>